# Biblelib

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
biblelib/: __init__.py  books.py  data.py  sources.py
biblelib/book/: ReadMe.md  __init__.py  book.py  books.tsv  books_apd.tsv  books_arb.tsv  books_bis.tsv  books_fra.tsv  books_hau.tsv  books_hin.tsv  books_ibo.tsv  books_ind.tsv  books_nep.tsv  books_nld.tsv  books_por.tsv  books_rus.tsv  books_spa.tsv  books_swh.tsv  books_tpi.tsv  books_vie.tsv  books_zhs.tsv  books_zht.tsv  books_zlm.tsv
biblelib/books/: __init__.py  books.py  books.tsv
biblelib/corpus/eng/BSB/: __init__.py  corpus.py
biblelib/pericope/: __init__.py  pericope.py  pericopes_eng_BSB.tsv
biblelib/tests/: __init__.py  test_mappings.py
biblelib/unit/: __init__.py  book.py  bookchapters.tsv  chapter.py  chapterverses.tsv  pericope.py  range.py  tempchapter.py  unit.py  unitrange.py  verse.py
biblelib/versification/: Enumerator.py  Mapper.py  ReadMe.md  VrefReader.py  __init__.py  eng-nt-vref.txt  eng-ot.txt  org-protestant.txt  rso-nt-vref.txt  rso-ot-vref.txt  rso-protestant-vref.txt  versification.py  vref-bcv.txt  vrefmap.py
biblelib/word/: __init__.py  bcvwpid.py  ubs.py  urlmanager.py
biblelib/word/mappings/: __init__.py  gnt.py  marble.py  wlcm.py
biblelib/words/: __init__.py  bcvwpid.py  clearid.py  mappings.py
docs/: #ReleaseNotes.md#  .#ReleaseNotes.md  Mappings.md  ReleaseNotes.md  explanation.md  how-to-guides.md  index.md  modules.md  pericopes.md  reference.md  tutorials.md
notebooks/: 00-Index.ipynb  10-Book.ipynb  20-Unit-Book.ipynb  22-Unit-Verse.ipynb
tests/: __init__.py  conftest.py  test_bcvwpid.py  test_book.py  test_book_unit.py  test_books.py  test_chapter.py  test_clearid.py  test_mappings.py  test_range.py  test_sources.py  test_unit.py  test_unitrange.py  test_verse.py
tests/book/: test_book.py
tests/pericope/: test_pericope.py
tests/unit/: test_chapter.py  test_unit.py  test_unit_book.py  test_unitrange.py  test_verse.py
tests/versification/: test_Enumerator.py  test_Mapper.py  test_VrefReader.py  test_versification.py  test_vref_derivation.py
tests/word/: __init__.py  test_bcvwpid.py  test_mappings.py  test_ubs.py  test_urlmanager.py
tests/word/mappings/: __init__.py  test_gnt.py  test_marble.py  test_wlcm.py
tools/: refresh_versification.py
