[tool.poetry]
name = "biblelib"
version = "0.3.13"
description = "Utilities for working with metadata for Bible books, references, pericopes, and other units."
authors = ["Sean Boisen <sean.boisen@gmail.com>"]
repository = "https://github.com/Clear-Bible/Biblelib/"
# documentation = "https://sboisen.github.io/Biblelib/"
readme = "README.md"
# apparently text files are also shipped?
# include = [
#   "biblelib/versification/*.txt"
# ]
packages = [
  {include = "biblelib"}
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.1.2"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocstrings = "^0.18.1"
mypy = "^0.961"
#pre-commit = "^2.20.0"
tox = "^3.25.1"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["biblelib"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
