[tool.poetry]
name = "biblelib"
version = "0.5.4"
description = "Utilities for working with metadata for Bible books, references, pericopes, and other units."
authors = ["Sean Boisen <sean.boisen@gmail.com>"]
repository = "https://github.com/Clear-Bible/Biblelib/"
# documentation = "https://sboisen.github.io/Biblelib/"
readme = "README.md"
# Bundled data files. Poetry ships non-.py files inside the package by
# default; these entries make the data files explicit and robust to that.
# (The large Macula mapping tables are NOT bundled: they download on first
# use and cache locally -- see biblelib/data.py.)
include = [
  "biblelib/versification/*.txt",
  "biblelib/versification/*.json",
]
packages = [
  {include = "biblelib"}
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "^2.3.0"
requests = "^2"
pooch = "^1.8"

[tool.poetry.scripts]
biblelib-download-data = "biblelib.data:main"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = ">=7.1.2,<10.0.0"
mypy = "^0.961"
pre-commit = "^4.0.1"
tox = "^3.25.1"
jupyterlab = "^4.2.5"
detect-secrets = "^1.5.0"
filelock = "^3.12"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocstrings = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# The experimental spaCy corpus module has undeclared optional dependencies
# (spacy, pandas) and is not importable in the test environment; exclude it
# from collection. (Note: --doctest-modules is passed explicitly by `make
# test`; it is intentionally NOT enabled here, so plain `pytest` -- used by CI
# -- does not run source doctests.)
addopts = "--ignore=biblelib/corpus"

[tool.mypy]
files = ["biblelib"]
# the experimental spaCy corpus module has undeclared optional deps and is a placeholder
exclude = ["biblelib/corpus/"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

# pooch does not ship type information (no py.typed marker)
[[tool.mypy.overrides]]
module = "pooch"
ignore_missing_imports = "True"
